# sendspin-image-server

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TECHNICAL.md  agents.md  docker-compose.yml  pyproject.toml  test-plan.md  todos.md  ui-review.md
.github/workflows/: publish.yml  release.yml
sendspin_image_server/: __init__.py  assignments.py  cli.py  client.py  db.py  dither.py  endpoints.py  mdns.py  registry.py  server.py  stream.py
sendspin_image_server/.claude/: settings.json
sendspin_image_server/tables/: 4-color.act  N-color-bright.act  N-color-natural.act
tests/: assignments_test.py  conftest.py  dither_image_test.py  dither_test.py  reference_output_test.py  registry_test.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
ui/src/components/: AddDevicePresetDialog.tsx  AddEndpointDialog.tsx  ClientCard.tsx  ClientDebugPreviewDialog.tsx  DevicePresetCard.tsx  EditDevicePresetDialog.tsx  EndpointCard.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx
ui/src/hooks/: usePoller.ts  useTheme.ts
